close #366 Event list bug on tablet

--- a/_sass/pages/_events.scss
+++ b/_sass/pages/_events.scss
@@ -4,9 +4,11 @@
     font-size: 0.33em;
     .event{
       @extend .col-md-4;
-      height: 400px;
       overflow: hidden;
       clear: none;
+      @media (min-width: $screen-md-min) {
+        height: 400px;
+      }
     }
   }
   header.page-header{
